Lucene accelerated processing configuration removed